--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>React Básico</title>
+    <style>
+        .red {
+            background-color: red;
+            color: white;
+            padding: 10px;
+        }
+
+        .green {
+            background-color: green;
+            color: white;
+            padding: 10px;
+        }
+
+    </style>
 </head>
 <body>
 
@@ -15,26 +29,40 @@
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
     <script type="text/babel">
-        const root = document.getElementById('root')
 
-        function MeuComponente(){
-
-            var nome = "Anderson"
-            var sobrenome = "Brito"
-
-            return (
-                <div>
-                    <h1>Olá React!</h1>  
-                    <p>O meu nome é {nome} {sobrenome}</p>  
-                </div>
-            )
+        class CompA extends React.Component {
+            render(){
+                return (
+                    <div className="red">
+                        <p>Texto do CompA</p>
+                    </div>
+                )
+            }
         }
 
-        let nome = "Roger"
-        let idade = 39
-        let email = "rogerbritosan@gmail.com"
+        class CompB extends React.Component {
+            render(){
+                return (
+                    <div className="green">
+                        <p>Texto do CompB</p>
+                    </div>
+                )
+            }
+        }
 
-        ReactDOM.render(<MeuComponente />, root)
+        class App extends React.Component {
+            render(){
+                return (
+                    <div>
+                        <CompA />
+                        <CompB />
+                    </div>
+                )
+            }
+        }
+
+        const root = document.getElementById('root')
+        ReactDOM.render(<App />, root)
     </script>
 
 </body>
