--- a/3-primeira-experiencia-com-react-js-e-jsx.html
+++ b/3-primeira-experiencia-com-react-js-e-jsx.html
@@ -16,7 +16,8 @@
 
     <script type="text/babel">
         const root = document.getElementById('root');
-        ReactDOM.render(<h1>Título</h1>, root);
+        let name = "Roger Brito";
+        ReactDOM.render(<h1>{name}</h1>, root);
     </script>
 
 </body>
